--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.26.3",
     "babel-jest": "^29.7.0",
+    "cypress": "^13.17.0",
     "jest": "^27.5.1",
     "webpack-dev-server": "^5.2.0"
   }
