--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,7 +10,6 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    timeout-minutes: 30
 
     steps:
     - uses: actions/checkout@v4
@@ -28,17 +27,18 @@ jobs:
     - name: Start Application
       run: |
         npm start &> server.log &
-        sleep 10
-      env:
-        CI: true
+        sleep 15
 
     - name: Check Server Logs
       run: cat server.log
 
+    - name: Test Server Availability
+      run: curl -I http://localhost:3000
+
     - name: Wait for Server
-      run: npx wait-on http://localhost:3000 --timeout 60000
+      run: npx wait-on http://localhost:3000 --timeout 120000
 
     - name: Run Cypress Tests
-      run: npx cypress run --browser chrome
+      run: npx cypress run
       env:
         CI: true
