--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -6,7 +6,32 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      # Install npm dependencies, cache them correctly
-      # and run all Cypress tests
+
+      # Install Node.js and cache dependencies
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      # Start the application
+      - name: Start application
+        run: npm start &
+        env:
+          NODE_ENV: development
+
+      # Wait for the application to be ready
+      - name: Wait for application to be ready
+        run: |
+          npx wait-on http://localhost:3000
+
+      # Run Cypress tests
       - name: Cypress run
         uses: cypress-io/github-action@v6
+        with:
+          record: false
+          publish-summary: true
+          component: false
