--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -7,18 +7,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # Set up Node.js and install dependencies with cache
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 20
-          cache: 'npm'
-
+      # Clear npm cache and remove node_modules directory
       - name: Clear npm cache
         run: npm cache clean --force
 
-      - name: Remove babel-loader cache
-        run: rm -rf node_modules/.cache/babel-loader
+      - name: Remove node_modules and babel-loader cache
+        run: |
+          rm -rf node_modules
+          rm -rf node_modules/.cache/babel-loader
 
       - name: Install dependencies
         run: npm ci
